added other modules

--- a/restricted-io-ifc.cabal
+++ b/restricted-io-ifc.cabal
@@ -26,6 +26,8 @@ library
   exposed-modules:
       IFCIO
   other-modules:
+      Internal.RestrictedIO
+      Internal.Untrusted
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
